--- a/src/checkout2.html
+++ b/src/checkout2.html
@@ -68,7 +68,7 @@
                                 <div class="checkout-services__box">
                                     <div class="checkout-services__row">
                                         <div class="checkout-services__name">
-                                            Пакет “Урбан”
+                                            Только материалы
                                         </div>
                                         <div class="checkout-services__price">
                                             20 763 162 &#8376;
@@ -472,28 +472,15 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
+                                    Только материалы
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 &#8376;
-                                    </div>
-                                    <div class="total__price-old">
-                                        21 813 947 &#8376;
+                                        1 200 162 ₸
                                     </div>
                                 </div>
                             </div>
                             <ul class="total__list">
-                                <li class="total__item">
-                                    <div class="total__item-name">
-                                        Пакет “Урбан”
-                                    </div>
-                                    <div class="total__item-price">
-                                        <div class="total__item-price-new">
-                                            20 763 162 &#8376; 
-                                        </div>
-                                    </div>
-                                </li>
                                 <li class="total__item">
                                     <div class="total__item-name">
                                         Наполенение
@@ -522,7 +509,7 @@
                                 </li>
                             </ul>
                             <button class="total__next button button1">
-                                Далее
+                                Оформить заявку
                             </button>
                         </div>
                     </div>
