--- a/src/checkout3.html
+++ b/src/checkout3.html
@@ -106,6 +106,9 @@
                                                 <div class="checkout-services__switcher-title">
                                                     Вызвать замерщика
                                                 </div>
+                                                <div class="checkout-services__switcher-text">
+                                                    Услуга замерщика входит в рабочий проект
+                                                </div>
                                             </div>
                                             <label class="switcher _unactive">
                                                 <input type="checkbox" checked>
@@ -116,7 +119,7 @@
                                         </div>
                                     </div>
                                     <div class="inform">
-                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 &#8376;. Для составления точной сметы вы можете оставить заявку на вызов замерщика
+                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 &#8376;. Для составления точной сметы вы можете оставить заявку на <span class="_blue">вызов замерщика</span>
                                     </div>
                                 </div>
                             </div>
@@ -284,28 +287,15 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
+                                    Только материалы
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 &#8376;
-                                    </div>
-                                    <div class="total__price-old">
-                                        21 813 947 &#8376;
+                                        1 200 162 ₸
                                     </div>
                                 </div>
                             </div>
                             <ul class="total__list">
-                                <li class="total__item">
-                                    <div class="total__item-name">
-                                        Пакет “Урбан”
-                                    </div>
-                                    <div class="total__item-price">
-                                        <div class="total__item-price-new">
-                                            20 763 162 &#8376; 
-                                        </div>
-                                    </div>
-                                </li>
                                 <li class="total__item">
                                     <div class="total__item-name">
                                         Наполенение
@@ -334,7 +324,7 @@
                                 </li>
                             </ul>
                             <button class="total__next button button1">
-                                Далее
+                                Оформить заявку
                             </button>
                         </div>
                     </div>
