--- a/src/checkout4.html
+++ b/src/checkout4.html
@@ -116,7 +116,7 @@
                                         </div>
                                     </div>
                                     <div class="inform">
-                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 &#8376;. Для составления точной сметы вы можете оставить заявку на вызов замерщика
+                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 &#8376;. Для составления точной сметы вы можете оставить заявку на <span class="_blue">вызов замерщика</span>
                                     </div>
                                 </div>
                             </div>
@@ -349,13 +349,16 @@
                                             </div>
                                         </div>
                                         <div class="checkout-material__dropdown">
-                                            <div class="checkout-material__price">
-                                                <div class="checkout-material__price-title">
-                                                    Цена/Штука
+                                            <div class="checkout-material__price2">
+                                                82 590 &#8376;
+                                            </div>
+                                            <div class="checkout-material__one">
+                                                <div class="checkout-material__one-title">
+                                                    Единица
                                                 </div>
-                                                <div class="checkout-material__price-num">
-                                                    52 000 &#8376;
-                                                </div>
+                                                <span>
+                                                    Штука
+                                                </span>
                                             </div>
                                             <div class="checkout-material__quantity">
                                                 <button class="checkout-material__quantity-btn _minus">
@@ -372,16 +375,6 @@
                                                         <path d="M8 4V12" stroke="white" stroke-width="2" stroke-linecap="round"/>
                                                     </svg>                                                            
                                                 </button>
-                                            </div>
-                                            <div class="checkout-material__wrapper">
-                                                <div class="checkout-material__total">
-                                                    <div class="checkout-material__total-title">
-                                                        Итого 
-                                                    </div>
-                                                    <div class="checkout-material__total-num">
-                                                        52 000 &#8376; 
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -472,28 +465,15 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
+                                    Только материалы
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 &#8376;
-                                    </div>
-                                    <div class="total__price-old">
-                                        21 813 947 &#8376;
+                                        1 200 162 ₸
                                     </div>
                                 </div>
                             </div>
                             <ul class="total__list">
-                                <li class="total__item">
-                                    <div class="total__item-name">
-                                        Пакет “Урбан”
-                                    </div>
-                                    <div class="total__item-price">
-                                        <div class="total__item-price-new">
-                                            20 763 162 &#8376; 
-                                        </div>
-                                    </div>
-                                </li>
                                 <li class="total__item">
                                     <div class="total__item-name">
                                         Наполенение
@@ -522,7 +502,7 @@
                                 </li>
                             </ul>
                             <button class="total__next button button1">
-                                Далее
+                                Оформить заявку
                             </button>
                         </div>
                     </div>
