--- a/src/checkout1.html
+++ b/src/checkout1.html
@@ -220,13 +220,16 @@
                                             </div>
                                         </div>
                                         <div class="checkout-material__dropdown">
-                                            <div class="checkout-material__price">
-                                                <div class="checkout-material__price-title">
-                                                    Цена/Штука
+                                            <div class="checkout-material__price2">
+                                                82 590 &#8376;
+                                            </div>
+                                            <div class="checkout-material__one">
+                                                <div class="checkout-material__one-title">
+                                                    Единица
                                                 </div>
-                                                <div class="checkout-material__price-num">
-                                                    52 000 &#8376;
-                                                </div>
+                                                <span>
+                                                    Штука
+                                                </span>
                                             </div>
                                             <div class="checkout-material__quantity">
                                                 <button class="checkout-material__quantity-btn _minus">
@@ -243,16 +246,6 @@
                                                         <path d="M8 4V12" stroke="white" stroke-width="2" stroke-linecap="round"/>
                                                     </svg>                                                            
                                                 </button>
-                                            </div>
-                                            <div class="checkout-material__wrapper">
-                                                <div class="checkout-material__total">
-                                                    <div class="checkout-material__total-title">
-                                                        Итого 
-                                                    </div>
-                                                    <div class="checkout-material__total-num">
-                                                        52 000 &#8376; 
-                                                    </div>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -393,7 +386,7 @@
                                 </li>
                             </ul>
                             <button class="total__next button button1">
-                                Далее
+                                Оформить заявку
                             </button>
                         </div>
                     </div>
