добавлен класс _selected для .material, добавил макс высоту для finishing__select-dropdown, клик вне .finishing__select - закрывает его

--- a/src/finishing-popups.html
+++ b/src/finishing-popups.html
@@ -641,7 +641,7 @@
                                                     Ламинат Floorpan, Серия Kastamonu, 31 класс 7 мм
                                                 </div>
                                                 <div class="finishing-modal__scroll-box">
-                                                    <a href="#" class="material">
+                                                    <a href="#" class="material _selected">
                                                         <div class="material__image">
                                                             <img src="images/material.jpg" alt="">
                                                             <div class="material__info-icon">
